[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/FPSCharacter.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.5

[node name="FPSCharacter" type="KinematicBody"]
script = ExtResource( 1 )
Jump = 3.5

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08, 0 )

[node name="Camera" type="Camera" parent="Head"]

[node name="HeadBonker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.572589, 0 )
enabled = true
cast_to = Vector3( 0, 1, 0 )

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 2 )]
[connection signal="show_speed" from="." to="HUD" method="_on_Character_show_speed"]
[connection signal="timeout" from="SprintTimer" to="." method="_on_SprintTimer_timeout"]
